feat: fiz endpoints para atualizar informações dos clientes
