# src/controllers/clienteController.js
@@ -1,10 +1,11 @@
 const express = require('express');
 const { 
-    clientAlreadyReg,
     // getAllclients, 
     getClienteByCod,
     countClientInfos,
     createClient,
+    updateClienteEmail,
+    updateClienteImageEName,
  } = require('../services/clienteService');
 const { generateToken } = require('../utils/JWT');
 
@@ -28,13 +29,19 @@ const countClientInfosController = async (req, res) => {
 };
 
 const createClientController = async (req, res) => {
-    const clientAlreadyExist = await clientAlreadyReg(req.body);
-    if (clientAlreadyExist) {
-        return res.status(409).json({ message: 'Esse cliente  já está cadastrado.' });
-    }
-    const newCliente = await createClient(req.body);
+    const newCliente = await createClient(req.body, res);
     const token = generateToken(JSON.stringify({ email: newCliente.email }));
     return res.status(201).json({ token });
+};
+
+const updateClienteInfosController = async (req, res) => {
+    await updateClienteImageEName(req.body);
+    return res.status(200).json({ message: 'Atualizado! Você precisa relogar.' });
+};
+
+const updateClienteEmailInfosController = async (req, res) => {
+    await updateClienteEmail(req.body);
+    return res.status(200).json({ message: 'Atualizado! Você precisa relogar.' });
 };
 
 module.exports = {
@@ -43,4 +50,6 @@ module.exports = {
     getClienteByCodClienteController,
     countClientInfosController,
     createClientController,
+    updateClienteInfosController,
+    updateClienteEmailInfosController,
 };
